@@ -5,6 +5,10 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - fix: REPLICATED DATA at the overview page showed incorrect percentage of
+   of replicated data when number of undereplicated records was higher than
+   number of total records
+
 2015/10/20 0.15.2
 =================
 
